syntax = "proto3";
package client;
option  go_package = "github.com/awlsring/tailscale-cloud-exit-nodes/pkg/gen/client/v1";

import "google/protobuf/empty.proto";

service TailscaleEphemeralExitNodesService {
    rpc HealthCheck(google.protobuf.Empty) returns(HealthCheckResponse) {}

    rpc ListProviders(google.protobuf.Empty) returns(ListProvidersResponse) {}

    rpc GetProvider(GetProviderRequest) returns(GetProviderResponse) {}

    rpc ListNodes(google.protobuf.Empty) returns(ListNodesResponse) {}
    
    rpc GetNode(GetNodeRequest) returns(GetNodeResponse) {}

    rpc CreateNode(CreateNodeRequest) returns(CreateNodeResponse) {}

    rpc DeleteNode(DeleteNodeRequest) returns(DeleteNodeResponse) {}

    rpc StartNode(StartNodeRequest) returns(StartNodeResponse) {}

    rpc StopNode(StopNodeRequest) returns(StopNodeResponse) {}

}

message HealthCheckRequest {}

message HealthCheckResponse {
    bool health = 1;
}

message ProviderSummary {
    string id = 1;
    string platform = 3;
}

message ListProvidersResponse {
    repeated ProviderSummary providers = 1;
}

message GetProviderRequest {
    string id = 1;
}

message GetProviderResponse {
    ProviderSummary provider = 1;
}

enum NodeStatus {
    UNKNOWN = 0;
    STARTING = 1;
    RUNNING = 2;
    STOPPING = 3;
    STOPPED = 4;
    ERROR = 5;
}

message NodeSummary {
    string id = 1;
    string provider_id = 2;
    string platform_id = 3;
    string tailnet_id = 4;
    string location = 5;
    string created_at = 6;
    string updated_at = 7;
}

message ListNodesResponse {
    repeated NodeSummary nodes = 1;
}

message GetNodeRequest {
    string id = 1;
}

message GetNodeResponse {
    NodeSummary node = 1;
}

message CreateNodeRequest {
    string provider_id = 1;
    string region = 2;
}

message CreateNodeResponse {
    NodeSummary ephemeral_exit_node = 1;
}

message DeleteNodeRequest {
    string id = 1;
}

message DeleteNodeResponse {
    bool success = 1;
}

message StartNodeRequest {
    string id = 1;
}

message StartNodeResponse {
    bool success = 1;
}

message StopNodeRequest {
    string id = 1;
}

message StopNodeResponse {
    bool success = 1;
}
